# main_fastapi

./: .gitignore  Pipfile  README.md  alembic.ini  docker-compose.yml  local.Dockerfile  prod.Dockerfile  prod.fargate.Dockerfile  pyproject.toml  settings.py  sqlalchemy_shell_setup.py
.github/workflows/: deploy_fargate_application.yml  deploy_fargate_application_nginx.yml  deploy_lambda.yml  deploy_lambda_application.yml  deploy_to_ecr.yml  lambda.yml
alembic/: env.py
alembic/versions/: 1_add_user_table.py  2_add_access_token_table.py  3_add_oauth_account_table.py  4_add_foo_tables.py
app/: __init__.py  main.py
app/config/: database.py  users.py
app/models/: __init__.py  base.py  foo.py  user.py
app/routers/: foo.py  mongo.py
app/schemas/: foo.py  generics.py  mongo.py  user.py
app/services/: main.py  mongo.py
app/utils/: app_exceptions.py  get_list_of_app_exceptions_for_frontend.py  request_exceptions.py  service_result.py
deplooy/: lambda.yml
deploy/: fargate.yml  fargate_nginx.yml  lambda.yml  parameters.json  repository.yml
deploy/nginx/: Dockerfile  nginx.conf
