[tool.poetry]
name = "main-api"
version = "0.1.0"
description = ""
authors = ["Leno <akrachunov@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
debugpy = "^1.8"
SQLAlchemy = "^2.0.23"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
alembic = "^1.12.1"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
sib-api-v3-sdk = "^7.6.0"
starlette-csrf = "^3.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
mangum = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
